--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --cor-fundo: #052a4b;
-    --cor-principal: #141c66;
-    --cor-secundaria: #5361c7;
+    --cor-principal: #1f436d;
+    --cor-secundaria: #1c305c;
     --cor-destaque: #4075d6cc;
     --cor-texto: #ccecff;
 }
